<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Lil Wiki</string>
    <string name="left">left</string>
    <string name="right">right</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Passsword</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="welcome">Welcome!</string>
    <string name="invalid_username">The username is invalid</string>
    <string name="invalid_password">Password must include >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="preferences_key_email">com.example.preferences_key_email</string>
    <string name="preferences_key_password">com.example.preferences_key_password</string>
    <string name="shared_prefs_storage_name">com.example.current_auth_info</string>
    <string name="preferences_search_mode">com.example.preferences_search_mode</string>
    <string name="action_create_account">create account</string>
    <string name="empty"> </string>
    <string name="next">next</string>
    <string name="prompt_discipline">name of a discipline</string>
    <string name="prompt_branch">name of a branch</string>
    <string name="prompt_article">name of an article</string>
    <string name="prompt_subsection">name of a subsection</string>
    <string name="prompt_text">…</string>
    <string name="save">save</string>
    <string name="is_latex">render as LaTeX</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="theme">Theme</string>
    <string name="language">Language</string>
    <string name="settings">Settings</string>
    <string name="logout">Log out</string>
    <string name="search">Search</string>
    <string name="search_mode">Search mode</string>
    <string name="remove">remove</string>
    <string name="edit">edit</string>


    <string-array name="search_modes">
        <item>private</item>
        <item>public</item>
    </string-array>

    <string-array name="languages">
        <item>English</item>
        <item>Русский</item>
    </string-array>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="search_hint">search</string>
</resources>