<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/formLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <EditText
        android:id="@+id/createArticleSubsTitleEdit"
        android:hint="@string/prompt_subsection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <CheckBox
        android:id="@+id/createArticleIsLatex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/is_latex"/>
    <EditText
        android:id="@+id/createArticleSubsText"
        android:hint="@string/prompt_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>