<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/emailEdit"
        android:layout_width="290dp"
        android:layout_height="72dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="84dp"
        android:hint="@string/prompt_email"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="48dp"
        android:clickable="false"
        android:text="@string/action_sign_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEdit" />

    <EditText
        android:id="@+id/passwordEdit"
        android:layout_width="290dp"
        android:layout_height="80dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEdit" />

    <TextView
        android:id="@+id/textSignUp"
        android:layout_width="233dp"
        android:layout_height="0dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="204dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/action_sign_up"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignIn" />

</androidx.constraintlayout.widget.ConstraintLayout>