<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Switch
        android:id="@+id/switchTheme"
        android:layout_width="299dp"
        android:layout_height="81dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="176dp"
        android:text="@string/theme"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerModes"
        android:layout_width="159dp"
        android:layout_height="66dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="92dp"
        android:entries="@array/search_modes"
        app:layout_constraintStart_toEndOf="@+id/textMode"
        app:layout_constraintTop_toBottomOf="@+id/switchTheme" />

    <TextView
        android:id="@+id/textMode"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="108dp"
        android:text="@string/search_mode"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchTheme" />

    <Button
        android:id="@+id/buttonSaveSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="176dp"
        android:text="@string/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerModes" />
</androidx.constraintlayout.widget.ConstraintLayout>
